--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 anytree==2.8.0
 clang==11.0
+fastparquet==0.5.0
+llvmlite==0.36.0
+numba==0.53.0
 numpy==1.20.1
 pandas==1.2.3
+pexpect==4.8.0
+ptyprocess==0.7.0
 python-dateutil==2.8.1
 pytz==2021.1
 six==1.15.0
+thrift==0.13.0
 tqdm==4.59.0
