--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ anytree==2.8.0
 clang==11.0
 llvmlite==0.36.0
 numpy
-pandas==1.2.3
+pandas
 pexpect==4.8.0
 ptyprocess==0.7.0
 python-dateutil==2.8.1
